--- a/packages/react-resizable-panels-website/src/routes/examples/shared.module.css
+++ b/packages/react-resizable-panels-website/src/routes/examples/shared.module.css
@@ -36,7 +36,7 @@
   justify-content: center;
   background-color: var(--color-panel-background);
   border-radius: 0.5rem;
-  overflow: auto;
+  overflow: hidden;
   font-size: 1rem;
   padding: 0.5rem;
   word-break: break-all;
